[gd_scene load_steps=2 format=3 uid="uid://dh700vaw1afvh"]

[ext_resource type="Script" path="res://scripts/hit_sound_audio_players.gd" id="1_r4022"]

[node name="hit_sound_audio_players" type="Node3D"]
script = ExtResource("1_r4022")

[node name="audioPlayer1" type="AudioStreamPlayer3D" parent="."]

[node name="audioPlayer2" type="AudioStreamPlayer3D" parent="."]

[node name="audioPlayer3" type="AudioStreamPlayer3D" parent="."]
